0.4.0/src/docs/dsl/dev.nokee.platform.jni.JniLibraryExtension.adoc
:toc:
:toclevels: 1
:toc-title: Contents
:icons: font
:idprefix:
:jbake-status: published
:encoding: utf-8
:lang: en-US
:sectanchors: true
:sectlinks: true
:linkattrs: true
= JniLibraryExtension
:jbake-type: dsl_chapter
:jbake-tags: user manual, gradle plugin dsl, JniLibraryExtension
:jbake-description: Learn about the build language of the JniLibraryExtension type.
:jbake-category: JNI types

API Documentation: link:../javadoc/dev/nokee/platform/jni/JniLibraryExtension.html[JniLibraryExtension]

Configuration for a Java Native Interface (JNI) library, defining the dependencies that make up the library plus other settings.



An instance of this type is added as a project extension by the JNI Library Plugin.



== Properties



[cols="1,2", options="header", width=100%]
|===
|Property
|Description


|link:#dev.nokee.platform.jni.JniLibraryExtension:binaries[binaries]
|Configure the binaries of this component.
The view contains an aggregation of all the binaries for each realized variants.

|link:#dev.nokee.platform.jni.JniLibraryExtension:dependencies[dependencies]
|The dependencies of this component.

|link:#dev.nokee.platform.jni.JniLibraryExtension:targetMachines[targetMachines]
|Specifies the target machines this component should be built for.
The "machines" extension property (see ) can be used to construct common operating system and architecture combinations.



|link:#dev.nokee.platform.jni.JniLibraryExtension:variants[variants]
|Configure the variants of this component.

|===




== Methods


[cols="1,2", options="header", width=100%]
|===
|Method
|Description


|`link:#dev.nokee.platform.base.DependencyAwareComponent:dependencies-org.gradle.api.Action-[dependencies](action)`
|Configure the dependencies of this component.

|===





== Property Details


[[dev.nokee.platform.jni.JniLibraryExtension:binaries]]
=== link:../javadoc/dev/nokee/platform/base/BinaryView.html[BinaryView]<link:../javadoc/dev/nokee/platform/base/Binary.html[Binary]> binaries (read-only)

Configure the binaries of this component.
The view contains an aggregation of all the binaries for each realized variants.



[[dev.nokee.platform.jni.JniLibraryExtension:dependencies]]
=== T dependencies (read-only)

The dependencies of this component.



[[dev.nokee.platform.jni.JniLibraryExtension:targetMachines]]
=== link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/SetProperty.html[SetProperty]<link:../javadoc/dev/nokee/runtime/nativebase/TargetMachine.html[TargetMachine]> targetMachines 

Specifies the target machines this component should be built for.
The "machines" extension property (see link:../javadoc/dev/nokee/platform/nativebase/TargetMachineFactory.html[TargetMachineFactory]) can be used to construct common operating system and architecture combinations.



For example:

[.listing]
----

targetMachines = [machines.linux.x86_64, machines.windows.x86_64]

----


[[dev.nokee.platform.jni.JniLibraryExtension:variants]]
=== link:../javadoc/dev/nokee/platform/base/VariantView.html[VariantView]<T> variants (read-only)

Configure the variants of this component.








== Method Details


[[dev.nokee.platform.base.DependencyAwareComponent:dependencies-org.gradle.api.Action-]]
=== void dependencies(link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/Action.html[Action]<? super T> action)

Configure the dependencies of this component.






